Fixed color package options.

--- a/styles/custom.tex
+++ b/styles/custom.tex
@@ -103,7 +103,7 @@
 
 \newcommand{\citetemp}[1]{(#1)}
 
-\usepackage[usenames, dvipsnames]{color}
+%\usepackage[usenames, dvipsnames]{color}
 
 \usepackage[bordercolor=gray!20,backgroundcolor=blue!10,linecolor=none,textsize=scriptsize,textwidth=1.2in]{todonotes}
 
