Fixed xcolor options.

--- a/styles/cleanthesis.sty
+++ b/styles/cleanthesis.sty
@@ -114,7 +114,7 @@
 %
 %
 % The xcolor package enables us to create/handle/name different colors
-\RequirePackage[dvipsnames]{xcolor}
+\RequirePackage[usenames,dvipsnames]{xcolor}
 
 % updates all colors regarding the defined main and accessory
 % color, as well as the defined colorize mode (full, reduced, bw)
@@ -698,6 +698,5 @@
 %
 % Clean signs around word origins in definitions
 %\newcommand{\cthesisorigin}[1]{\textsf{\textlangle}#1\textsf{\textrangle}}
-
 
 
