--- a/styles/cleanthesis.sty
+++ b/styles/cleanthesis.sty
@@ -29,7 +29,7 @@
 %
 % **************************************************
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{cleanthesis}[2015/08/26 v0.3.1 A clean LaTeX style for thesis documents]
+\ProvidesPackage{styles/cleanthesis}[2015/08/26 v0.3.1 A clean LaTeX style for thesis documents]
 %
 % **************************************************
 % Package options
@@ -73,19 +73,19 @@
 \setkeys[ct]{cthesis}{colorize=full}
 
 % OPTION colortheme
-% --> values = bluemagenta|bluegreen
-\define@choicekey*[ct]{cthesis}{colortheme}[\val\themenr]{bluemagenta,bluegreen}[bluemagenta]{\def\cthesis@colortheme{\themenr}}
-\setkeys[ct]{cthesis}{colortheme=bluemagenta}
+% --> values = bul|bluegreen
+\define@choicekey*[ct]{cthesis}{colortheme}[\val\themenr]{bul,bluegreen}[bul]{\def\cthesis@colortheme{\themenr}}
+\setkeys[ct]{cthesis}{colortheme=bul}
 
 % OPTION bibsys
 % --> values = biber|bibtex
-\define@choicekey*[ct]{cthesis}{bibsys}[\val\bibsysnr]{biber,bibtex}[bibtex]{\def\cthesis@bibsys{#1}}
-\setkeys[ct]{cthesis}{bibsys=bibtex}
+\define@choicekey*[ct]{cthesis}{bibsys}[\val\bibsysnr]{biber,bibtex}[biber]{\def\cthesis@bibsys{#1}}
+\setkeys[ct]{cthesis}{bibsys=biber}
 
 % OPTION bibfile
 % --> values = file name of your bibtex file
 \define@key[ct]{cthesis}{bibfile}[bib-refs]{\def\cthesis@bibfile{#1}}
-\setkeys[ct]{cthesis}{bibfile=fbmatter/thesis}
+\setkeys[ct]{cthesis}{bibfile=thesis}
 
 % OPTION bibstyle
 % --> values = alphabetic|numeric|authoryear
@@ -102,9 +102,6 @@
 }
 
 \ProcessOptionsX[ct]<cthesis>
-
-% Checks if bib file exists, if not we throw an error
-\IfFileExists{\cthesis@bibfile.bib}{}{\PackageError{cleanthesis}{Unable to find BibTeX file \cthesis@bibfile.bib!}{Please provide the name of your BibTeX file to the cleanthesis package parameter bibfile.}}
 
 % **************************************************
 % Color Definitions
@@ -195,7 +192,7 @@
 
 % sets the color theme regarding the given package option colortheme
 \ifcase\cthesis@colortheme
-	% case 0 (colortheme == bluemagenta)
+	% case 0 (colortheme == bul)
 	\cthesissetcolorbul
 \or
 	% case 1 (colortheme == bluegreen)
@@ -277,8 +274,7 @@
 ]{geometry}
 %
 \RequirePackage[					% advanced quotes
-	strict=true,					% 	- warning are errors now
-	style=german					% 	- german quotes
+	strict=true					% 	- warning are errors now
 ]{csquotes}
 %
 \RequirePackage[					% use biblatex for bibliography
@@ -295,15 +291,11 @@
 	minnames=1,%
 	maxbibnames=5,%
 	minbibnames=3,%
-	maxcitenames=2,%
-	mincitenames=1%
+	maxcitenames=5,%
+	mincitenames=1,%
+	defernumbers=true%
 ]{biblatex}
 \bibliography{\cthesis@bibfile}
-\DefineBibliographyStrings{ngerman}{%
-	andothers = {{et\,al\adddot}}, % 'et al.' instead of 'u.a.'
-	backrefpage = {{zitiert auf Seite}},%
-	backrefpages = {{zitiert auf den Seiten}},%
-}
 
 % **************************************************
 % Text Format
@@ -425,7 +417,7 @@
 	\fancyfoot[EL]{%
 		\tgherosfont\footnotesize%
 		\begin{minipage}[b]{1.5cm}%
-			\raggedleft\color{ctcolorfooterpage}\normalsize\textbf{\thepage}%
+			\raggedleft\color{ctcolorfooterpage}\normalsize\textbf{\ifnumequal{\thepage}{42}{\textit{\thepage}}{\thepage}}%
 		\end{minipage}%
 		\footnotesize%
 		\hspace*{10pt}{\color{ctcolorfooterline}\rule[-90pt]{1.25pt}{100pt}}%
