Updated word breaking.

--- a/bodymatter/02-background.tex
+++ b/bodymatter/02-background.tex
@@ -76,7 +76,7 @@ In 2013 Selby and Woollard published an important work~\cite{eps346937} which su
 
 Starting from Wing's definition, Repenning and his colleagues from the University of Colorado modelled \ac{CT} as an iterative process structured in three stages~\cite{Repenning:fy} (see Figure~\ref{fig:ctiterative}):
 \begin{enumerate}
-  \item \textit{problem formulation (abstraction)}, namely a verbal or diagrammatic conceptualization of the problem, in which abstraction plays a fundamental role to conceptualize a problem. Usually, a form of visual thinking can be helpful (e.g., diagrams);
+  \item \textit{problem formulation (abstraction)}, namely a verbal or di\-a\-gram\-mat\-ic con\-cep\-tu\-al\-i\-za\-tion of the problem, in which abstraction plays a fundamental role to conceptualize a problem. Usually, a form of visual thinking can be helpful (e.g., diagrams);
   \item \textit{solution expression (automation)}, where the solution is described in a non-ambiguous way so that it can be executed by a computer. The most important tool in this stage is programming;
   \item \textit{execution and evaluation (analysis)}, where one may obtain visualizations of the outcome from the other two stages and evaluate them.
 \end{enumerate}
