--- a/bodymatter/05-tapasplay.tex
+++ b/bodymatter/05-tapasplay.tex
@@ -295,7 +295,7 @@ A 6 minutes average duration of each match was devised from an early internal pl
   \end{tabular}
 \end{table}
 
-\added{Moreover, this evaluation preliminarily investigated over the enjoyability (questionnaire's Q1), collaboration support (questionnaire's Q2), and interactivity (questionnaire's Q3) of the learning experience provided by TAPASPlay.}
+\added{Moreover, this evaluation preliminarily investigated over the en\-joy\-a\-bil\-i\-ty (ques\-tion\-naire's Q1), col\-lab\-o\-ra\-tion sup\-port (ques\-tion\-naire's Q2), and in\-ter\-ac\-tiv\-i\-ty (ques\-tion\-naire's Q3) of the learn\-ing ex\-pe\-ri\-ence pro\-vid\-ed by TAPAS\-Play.}
 
 \section{Results}
 The collected data were analysed by
