--- a/backmatter/thesis.bib
+++ b/backmatter/thesis.bib
@@ -9,7 +9,7 @@
 
 @ARTICLE{kazimoglu2012serious,
   AUTHOR = {Kazimoglu, Cagin and Kiernan, Mary and Bacon, Liz and Mackinnon, Lachlan},
-  PUBLISHER = {Elsevier BV},
+  PUBLISHER = {Elsevier},
   DATE = {2012},
   JOURNALTITLE = {Procedia-Social and Behavioural Sciences},
   TITLE = {A serious game for de\-vel\-op\-ing com\-pu\-ta\-tion\-al think\-ing and lear\-ning in\-tro\-duc\-to\-ry com\-put\-er pro\-gram\-ming},
@@ -126,7 +126,7 @@
 
 @BOOK{disessa2001changing,
   AUTHOR = {DiSessa, Andrea A.},
-  PUBLISHER = {Mit Press},
+  PUBLISHER = {MIT Press},
   DATE = {2001},
   TITLE = {Changing minds: Computers, learning, and literacy},
 }
@@ -249,7 +249,7 @@
 }
 
 @BOOK{Anonymous:2011kk,
-  LOCATION = {Washington, D.C.},
+  LOCATION = {Washington, D.C., USA},
   PUBLISHER = {National Academies Press},
   DATE = {2011-08},
   TITLE = {{Report of a Workshop on the Pedagogical Aspects of Computational Thinking}},
@@ -263,7 +263,7 @@
 }
 
 @BOOK{Anonymous:2010fz,
-  LOCATION = {Washington, D.C.},
+  LOCATION = {Washington, D.C., USA},
   PUBLISHER = {National Academies Press},
   DATE = {2010-04},
   TITLE = {{Report of a Workshop on The Scope and Nature of Computational Thinking}},
@@ -271,8 +271,8 @@
 
 @INPROCEEDINGS{Repenning:2010cz,
   AUTHOR = {Repenning, Alexander and Webb, David and Ioannidou, Andri},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 41st ACM technical symposium},
   DATE = {2010},
   TITLE = {{Scalable game design and the development of a checklist for getting computational thinking into public schools}},
@@ -287,7 +287,7 @@
 
 @INPROCEEDINGS{Maloney:2008jt,
   AUTHOR = {Maloney, John and Peppier, Kylie and Kafai, Yasmin B. and Resnick, Mitchel and Rusk, Natalie},
-  ORGANIZATION = {MIT Media Laboratory, Cambridge, United States},
+  ORGANIZATION = {MIT Media Laboratory},
   BOOKTITLE = {SIGCSE'08 - Proceedings of the 39th ACM Technical Symposium on Computer Science Education},
   DATE = {2008-12},
   TITLE = {{Programming by choice: Urban youth learning programming with scratch}},
@@ -313,8 +313,8 @@
 
 @INPROCEEDINGS{Ishii:1997gy,
   AUTHOR = {Ishii, Hiroshi and Ullmer, Brygg},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the SIGCHI Conference},
   DATE = {1997},
   TITLE = {{Tangible bits}},
@@ -353,7 +353,7 @@
 @ARTICLE{turchi2016human,
   AUTHOR = {Turchi, Tommaso and Malizia, Alessio},
   DATE = {2016},
-  JOURNALTITLE = {ICST Trans. Ambient Systems},
+  JOURNALTITLE = {ICST Transactions on Ambient Systems},
   NUMBER = {9},
   TITLE = {A Human-Centred Tangible approach to learning Computational Thinking},
   VOLUME = {3},
@@ -361,7 +361,7 @@
 
 @INCOLLECTION{dix2016rich,
   AUTHOR = {Dix, Alan and Malizia, Alessio and Turchi, Tommaso and Gill, Steve and Loudon, Gareth and Morris, Richard and Chamberlain, Alan and Bellucci, Andrea},
-  PUBLISHER = {Springer, Cham},
+  PUBLISHER = {Springer},
   BOOKTITLE = {Collaboration Meets Interactive Spaces},
   DATE = {2016},
   TITLE = {Rich dig\-it\-al col\-lab\-o\-ra\-tions in a small ru\-ral com\-mu\-ni\-ty},
@@ -375,7 +375,7 @@
   NUMBER={10},
   PAGES={13649--13673},
   DATE={2019},
-  PUBLISHER={Springer US}
+  PUBLISHER={Springer}
 }
 
 @INPROCEEDINGS{Anonymous:2015dr,
@@ -398,8 +398,8 @@
 
 @INPROCEEDINGS{Muller:2014kx,
   AUTHOR = {Müller, Jens and Schwarz, Tobias and Butscher, Simon and Reiterer, Harald},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 2014 International Working Conference},
   DATE = {2014},
   TITLE = {{Back to tangibility}},
@@ -416,8 +416,8 @@
 
 @INPROCEEDINGS{Davies:2014cl,
   AUTHOR = {Davies, Nigel and Langheinrich, Marc and Clinch, Sarah and Elhart, Ivan and Friday, Adrian and Kubitza, Thomas and Surajbali, Bholanathsingh},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 32nd annual ACM conference},
   DATE = {2014},
   TITLE = {{Personalisation and privacy in future pervasive display networks}},
@@ -425,8 +425,8 @@
 
 @INPROCEEDINGS{Cremonesi:2014fy,
   AUTHOR = {Cremonesi, Paolo and Di Rienzo, Antonella and Frà, Cristina and Garzotto, Franca and Oliveto, Luigi and Valla, Massimo},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 2014 International Working Conference},
   DATE = {2014},
   TITLE = {{Personalized interaction on large displays}},
@@ -434,8 +434,8 @@
 
 @INPROCEEDINGS{Bigelow:2014th,
   AUTHOR = {Bigelow, Alex and Drucker, Steven and Fisher, Danyel and Meyer, Miriah},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 2014 International Working Conference},
   DATE = {2014},
   TITLE = {{Re\-flec\-tions on how designers design with data}},
@@ -461,8 +461,8 @@
 
 @INPROCEEDINGS{Lee:2013gya,
   AUTHOR = {Lee, Jisoo and Garduño, Luis and Walker, Erin and Burleson, Winslow},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 2013 ACM international joint conference},
   DATE = {2013},
   TITLE = {{A tangible programming tool for creation of context-aware applications}},
@@ -530,8 +530,8 @@
 
 @INPROCEEDINGS{Wang:2012cp,
   AUTHOR = {Wang, Danli and Zhang, Yang and Gu, Tianyuan and He, Liang and Wang, Hongan},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {Adjunct proceedings of the 25th annual ACM symposium},
   DATE = {2012},
   TITLE = {{E-Block}},
@@ -539,8 +539,8 @@
 
 @INPROCEEDINGS{Boer:2012ku,
   AUTHOR = {Boer, Laurens and Donovan, Jared},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the Designing Interactive Systems Conference},
   DATE = {2012},
   TITLE = {{Provotypes for par\-tic\-i\-pat\-o\-ry in\-no\-va\-tion}},
@@ -548,8 +548,8 @@
 
 @INPROCEEDINGS{Sipitakiat:2012cba,
   AUTHOR = {Sipitakiat, Arnan and Nusen, Nusarin},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 11th In-ter-na-tion-al Con-fer-ence},
   DATE = {2012},
   TITLE = {{Robo-Blocks}},
@@ -646,8 +646,8 @@
 
 @INPROCEEDINGS{Horn:2009be,
   AUTHOR = {Horn, Michael and Solovey, Erin Treacy and Crouser, Jordan and Jacob, Robert},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the SIGCHI Conference},
   DATE = {2009},
   TITLE = {{Comparing the use of tangible and graphical programming languages for informal science education}},
@@ -656,7 +656,7 @@
 @INCOLLECTION{Muller:2009wy,
   AUTHOR = {Müller, Jörg and Wilmsmann, Dennis and Exeler, Juliane and Buzeck, Markus and Schmidt, Albrecht and Jay, Tim and Krüger, Antonio},
   LOCATION = {Berlin, Heidelberg},
-  PUBLISHER = {Springer Berlin Heidelberg},
+  PUBLISHER = {Springer},
   BOOKTITLE = {Virtual and Mixed Reality},
   DATE = {2009},
   TITLE = {{Display Blindness: The Effect of Expectations on Attention towards Digital Signage}},
@@ -673,8 +673,8 @@
 
 @INPROCEEDINGS{Hancock:2009bg,
   AUTHOR = {Hancock, Mark and Hilliges, Otmar and Collins, Christopher and Baur, Dominikus and Carpendale, Sheelagh},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the ACM International Conference},
   DATE = {2009},
   TITLE = {{Exploring tangible and direct touch interfaces for manipulating 2D and 3D information on a digital table}},
@@ -683,7 +683,7 @@
 @INCOLLECTION{Mugellini:2009gl,
   AUTHOR = {Mugellini, Elena and Lalanne, Denis and Dumas, Bruno and Evéquoz, Florian and Gerardi, Sandro and Le Calvé, Anne and Boder, Alexandre and Ingold, Rolf and Abou Khaled, Omar},
   LOCATION = {Berlin, Heidelberg},
-  PUBLISHER = {Springer Berlin Heidelberg},
+  PUBLISHER = {Springer},
   BOOKTITLE = {Virtual and Mixed Reality},
   DATE = {2009},
   TITLE = {{MEMODULES as Tangible Shortcuts to Multimedia Information}},
@@ -691,11 +691,11 @@
 
 @INPROCEEDINGS{Manches:2009kg,
   AUTHOR = {Manches, Andrew and O'Malley, Claire and Benford, Steve},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
-  BOOKTITLE = {the 3rd International Conference},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
+  BOOKTITLE = {Proceedings of the 3rd International Conference on Tangible and Embedded Interaction},
   DATE = {2009},
-  TITLE = {{Physical manipulation}},
+  TITLE = {{Physical manipulation: evaluating the potential for tangible designs}},
 }
 
 @INPROCEEDINGS{Kirk:2009ue,
@@ -717,8 +717,8 @@
 
 @INPROCEEDINGS{Weiss:2009ct,
   AUTHOR = {Weiss, Malte and Wagner, Julie and Jansen, Yvonne and Jennings, Roger and Khoshabeh, Ramsin and Hollan, James D. and Borchers, Jan},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the SIGCHI Conference},
   DATE = {2009},
   TITLE = {{SLAP widgets}},
@@ -726,8 +726,8 @@
 
 @INPROCEEDINGS{Sas:2008ch,
   AUTHOR = {Sas, Corina and Dix, Alan},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {Proceeding of the twenty-sixth annual CHI conference},
   DATE = {2008},
   TITLE = {{Designing and evaluating mobile phone-based interaction with public displays}},
@@ -735,8 +735,8 @@
 
 @INPROCEEDINGS{Jacob:2008dj,
   AUTHOR = {Jacob, Robert and Girouard, Audrey and Hirshfield, Leanne and Horn, Michael and Shaer, Orit and Solovey, Erin Treacy and Zigelbaum, Jamie},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {Proceeding of the twenty-sixth annual CHI conference},
   DATE = {2008},
   TITLE = {{Reality-based interaction}},
@@ -745,7 +745,7 @@
 @INCOLLECTION{Billard:2008kb,
   AUTHOR = {Billard, Aude and Calinon, Sylvain and Dillmann, Rüdiger and Schaal, Stefan},
   LOCATION = {Berlin, Heidelberg},
-  PUBLISHER = {Springer Berlin Heidelberg},
+  PUBLISHER = {Springer},
   BOOKTITLE = {Springer Handbook of Robotics},
   DATE = {2008},
   TITLE = {{Robot Programming by Demonstration}},
@@ -753,8 +753,8 @@
 
 @INPROCEEDINGS{Parkes:2008bu,
   AUTHOR = {Parkes, Amanda J. and Raffle, Hayes Solos and Ishii, Hiroshi},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {Proceeding of the twenty-sixth annual CHI conference},
   DATE = {2008},
   TITLE = {{Topobo in the wild}},
@@ -762,8 +762,8 @@
 
 @INPROCEEDINGS{Marshall:2007dr,
   AUTHOR = {Marshall, Paul},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 1st international conference},
   DATE = {2007},
   TITLE = {{Do tangible interfaces enhance learning?}},
@@ -787,7 +787,7 @@
 
 @INPROCEEDINGS{kaltenbrunner2005tuio,
   AUTHOR = {Kaltenbrunner, Martin and Bovermann, Till and Bencina, Ross and Costanza, Enrico},
-  BOOKTITLE = {Proc. of the The 6th Int{’}l Workshop on Gesture in Human-Computer Interaction and Simulation},
+  BOOKTITLE = {Proceedings of the The 6th International Workshop on Gesture in Human-Computer Interaction and Simulation},
   DATE = {2005},
   TITLE = {{TUIO: A protocol for table-top tangible user interfaces}},
 }
@@ -803,8 +803,8 @@
 
 @INPROCEEDINGS{Izadi:2003gb,
   AUTHOR = {Izadi, Shahram and Brignull, Harry and Rodden, Tom and Rogers, Yvonne and Underwood, Mia},
-  LOCATION = {New York, New York, USA},
-  PUBLISHER = {ACM Press},
+  LOCATION = {New York, NY, USA},
+  PUBLISHER = {ACM},
   BOOKTITLE = {the 16th annual ACM symposium},
   DATE = {2003},
   TITLE = {{Dynamo}},
@@ -813,7 +813,7 @@
 @INCOLLECTION{Sutcliffe:2002:URE:581174,
   AUTHOR = {Sutcliffe, Alistair},
   LOCATION = {London},
-  PUBLISHER = {Springer London},
+  PUBLISHER = {Springer},
   BOOKTITLE = {User-Centred Requirements Engineering},
   DATE = {2002},
   TITLE = {{Scenario-Based Requirements Engineering (SCRAM)}},
@@ -847,7 +847,7 @@
 
 @ARTICLE{Kotsopoulos:2017kd,
   AUTHOR = {Kotsopoulos, Donna and Floyd, Lisa and Khan, Steven and Namukasa, Immaculate Kizito and Somanath, Sowmya and Weber, Jessica and Yiu, Chris},
-  PUBLISHER = {Springer International Publishing},
+  PUBLISHER = {Springer},
   URL = {https://link.springer.com/article/10.1007/s40751-017-0031-2},
   DATE = {2017-03},
   DOI = {10.1007/s40751-017-0031-2},
@@ -860,7 +860,7 @@
 @INCOLLECTION{Yadav:2017ir,
   AUTHOR = {Yadav, Aman and Gretter, Sarah and Good, Jon and McLean, Tamika},
   LOCATION = {Cham},
-  PUBLISHER = {Springer International Publishing},
+  PUBLISHER = {Springer},
   URL = {http://link.springer.com/10.1007/978-3-319-52691-1_13},
   BOOKTITLE = {Emerging Research, Practice, and Policy on Computational Thinking},
   DATE = {2017-04},
@@ -923,7 +923,7 @@
   AUTHOR = {Scaffidi, Christopher},
   EDITOR = {Barbosa, Simone and Markopoulos, Panos and Paternò, Fabio and Stumpf, Simone and Valtolina, Stefano},
   LOCATION = {Cham},
-  PUBLISHER = {Springer International Publishing},
+  PUBLISHER = {Springer},
   BOOKTITLE = {End-User Development},
   DATE = {2017},
   ISBN = {978-3-319-58735-6},
@@ -933,7 +933,7 @@
 @INCOLLECTION{Fischer:2017df,
   AUTHOR = {Fischer, Gerhard and Fogli, Daniela and Piccinno, Antonio},
   LOCATION = {Cham},
-  PUBLISHER = {Springer International Publishing},
+  PUBLISHER = {Springer},
   URL = {http://link.springer.com/10.1007/978-3-319-60291-2_4},
   BOOKTITLE = {New Perspectives in End-User Development},
   DATE = {2017-08},
@@ -974,7 +974,7 @@
   DATE = {2016-01},
   DOI = {10.1016/j.robot.2015.10.008},
   ISSN = {0921-8890},
-  JOURNALTITLE = {Robot. Auton. Syst.},
+  JOURNALTITLE = {Robotics and Autonomous Systems},
   KEYWORDS = {Computational thinking,Educational robotics,Secondary education,Skill development},
   NUMBER = {PB},
   TITLE = {Advancing Students' Computational Thinking Skills Through Educational Robotics},
@@ -1011,7 +1011,7 @@
   DATE = {2016-07},
   DOI = {10.1145/2955114},
   ISSN = {0001-0782},
-  JOURNALTITLE = {Commun. ACM},
+  JOURNALTITLE = {Communications of the ACM},
   NUMBER = {8},
   TITLE = {From Computational Thinking to Computational Participation in K--12 Education},
   VOLUME = {59},
@@ -1041,7 +1041,7 @@
 
 @ARTICLE{Cabitza:2016bz,
   AUTHOR = {Cabitza, Federico and Fogli, Daniela and Lanzilotti, Rosa and Piccinno, Antonio},
-  PUBLISHER = {Springer US},
+  PUBLISHER = {Springer},
   URL = {http://link.springer.com/10.1007/s11042-016-3511-2},
   DATE = {2016-04},
   DOI = {10.1007/s11042-016-3511-2},
@@ -1126,7 +1126,7 @@
   DATE = {2014-03},
   DOI = {10.1145/2576872},
   ISSN = {1946-6226},
-  JOURNALTITLE = {Trans. Comput. Educ.},
+  JOURNALTITLE = {Transactions on Computing Education},
   KEYWORDS = {Computational thinking,teacher education,teaching/learning strategies},
   NUMBER = {1},
   TITLE = {Com\-pu\-ta\-tion\-al Think\-ing in El\-e\-men\-ta\-ry and Sec\-ond\-a\-ry Teach\-er Ed\-u\-ca\-tion},
@@ -1158,12 +1158,12 @@
 @ARTICLE{Lye:2014,
   AUTHOR = {Lye, Sze Yee and Koh, Joyce Hwee Ling},
   LOCATION = {Amsterdam, The Netherlands, The Netherlands},
-  PUBLISHER = {Elsevier Science Publishers B. V.},
+  PUBLISHER = {Elsevier},
   URL = {http://dx.doi.org/10.1016/j.chb.2014.09.012},
   DATE = {2014-12},
   DOI = {10.1016/j.chb.2014.09.012},
   ISSN = {0747-5632},
-  JOURNALTITLE = {Comput. Hum. Behav.},
+  JOURNALTITLE = {Computers in Human Behavior},
   KEYWORDS = {Computational thinking,Computer science education,K-12,Programming,Scratch},
   NUMBER = {C},
   TITLE = {Review on Teaching and Learning of Computational Thinking Through Programming},
@@ -1255,13 +1255,13 @@
 
 @ARTICLE{Liu:2011,
   AUTHOR = {Liu, Chen-Chung and Cheng, Yuan-Bang and Huang, Chia-Wen},
-  LOCATION = {Oxford, UK, UK},
-  PUBLISHER = {Elsevier Science Ltd.},
+  LOCATION = {Oxford, UK},
+  PUBLISHER = {Elsevier},
   URL = {http://dx.doi.org/10.1016/j.compedu.2011.04.002},
   DATE = {2011-11},
   DOI = {10.1016/j.compedu.2011.04.002},
   ISSN = {0360-1315},
-  JOURNALTITLE = {Comput. Educ.},
+  JOURNALTITLE = {Computers \& Education},
   KEYWORDS = {Flow experience,Game-based learning,Problem solving,Simulation},
   NUMBER = {3},
   TITLE = {The Effect of Simulation Games on the Learning of Computational Problem Solving},
@@ -1306,7 +1306,7 @@
 
 @BOOK{Herbert:2012,
   AUTHOR = {Herbert, Charles W.},
-  LOCATION = {Boston, MA, United States},
+  LOCATION = {Boston, MA, USA},
   PUBLISHER = {Course Technology Press},
   DATE = {2010},
   EDITION = {2nd},
@@ -1323,8 +1323,8 @@
 
 @INPROCEEDINGS{Koh:2010,
   AUTHOR = {Koh, Kyu Han and Basawapatna, Ashok and Bennett, Vicki and Repenning, Alexander},
-  LOCATION = {Washington, DC, USA},
-  PUBLISHER = {IEEE Computer Society},
+  LOCATION = {Washington, D.C., USA},
+  PUBLISHER = {IEEE},
   URL = {https://doi.org/10.1109/VLHCC.2010.17},
   BOOKTITLE = {Proceedings of the 2010 IEEE Symposium on Visual Languages and Human-Centric Computing},
   DATE = {2010},
@@ -1343,7 +1343,7 @@
   DATE = {2009-03},
   DOI = {10.1145/1539024.1508959},
   ISSN = {0097-8418},
-  JOURNALTITLE = {SIGCSE Bull.},
+  JOURNALTITLE = {Proceedings of the 40th ACM Technical Symposium on Computer Science Education},
   KEYWORDS = {computational thinking,k-12 education,language},
   NUMBER = {1},
   TITLE = {Thinking About Computational Thinking},
@@ -1353,7 +1353,7 @@
 @INCOLLECTION{Burnett:2009ke,
   AUTHOR = {Burnett, Margaret},
   LOCATION = {Berlin, Heidelberg},
-  PUBLISHER = {Springer Berlin Heidelberg},
+  PUBLISHER = {Springer},
   URL = {http://link.springer.com/10.1007/978-3-642-00427-8_2},
   BOOKTITLE = {Virtual and Mixed Reality},
   DATE = {2009},
@@ -1372,7 +1372,7 @@
 @ARTICLE{Dorner:tr,
   AUTHOR = {Dorner, Christian and Hess, Jan and Pipek, Volkmar},
   DATE = {2007},
-  JOURNALTITLE = {aisel.aisnet.org},
+  JOURNALTITLE = {ECIS 2007 Proceedings},
   TITLE = {{Improving Information Systems by End User Development: A Case Study}},
 }
 
@@ -1398,7 +1398,7 @@
   DATE = {2007-11},
   DOI = {10.1109/TSMCA.2007.904776},
   ISSN = {1083-4427},
-  JOURNALTITLE = {Trans. Sys. Man Cyber. Part A},
+  JOURNALTITLE = {Transactions on Systems, Man, and Cybernetics Part A: Systems},
   KEYWORDS = {Design methodology,user interface human factors,user-centered design,visual languages},
   NUMBER = {6},
   TITLE = {Visual Interactive Systems for End-User Development: A Model-Based Design Methodology},
@@ -1420,7 +1420,7 @@
 @BOOK{Lieberman:2006,
   AUTHOR = {Lieberman, Henry and Paternò, Fabio and Wulf, Volker},
   LOCATION = {Berlin, Heidelberg},
-  PUBLISHER = {Springer-Verlag},
+  PUBLISHER = {Springer},
   DATE = {2006},
   ISBN = {1402042205},
   TITLE = {End User Development (Human-Computer Interaction Series)},
@@ -1439,7 +1439,7 @@
 @INCOLLECTION{Fischer:2006kg,
   AUTHOR = {Fischer, Gerhard and Giaccardi, Elisa},
   LOCATION = {Dordrecht},
-  PUBLISHER = {Springer Netherlands},
+  PUBLISHER = {Springer},
   URL = {http://link.springer.com/10.1007/1-4020-5386-X_19},
   BOOKTITLE = {End User Development},
   DATE = {2006-01},
@@ -1450,8 +1450,8 @@
 
 @INPROCEEDINGS{Costabile:2005,
   AUTHOR = {Costabile, Maria Francesca and Fogli, Daniela and Mussio, Piero and Piccinno, Antonio},
-  LOCATION = {Washington, DC, USA},
-  PUBLISHER = {IEEE Computer Society},
+  LOCATION = {Washington, D.C., USA},
+  PUBLISHER = {IEEE},
   URL = {http://dx.doi.org/10.1109/VLHCC.2005.7},
   BOOKTITLE = {Proceedings of the 2005 IEEE Symposium on Visual Languages and Human-Centric Computing},
   DATE = {2005},
@@ -1463,7 +1463,7 @@
 
 @ARTICLE{barr2005exploring,
   AUTHOR = {Barr, Terri Feldman and Dixon, Andrea L. and Gassenheimer, Jule B.},
-  PUBLISHER = {Sage Publications Sage CA: Thousand Oaks, CA},
+  PUBLISHER = {Sage Publications},
   DATE = {2005},
   JOURNALTITLE = {Journal of Marketing Education},
   NUMBER = {1},
@@ -1473,8 +1473,8 @@
 
 @INPROCEEDINGS{Abras:2004,
   AUTHOR = {Abras, Chadia and Maloney-krichmar, Diane and Preece, Jenny},
-  PUBLISHER = {Publications},
-  BOOKTITLE = {In Bainbridge, W. Encyclopedia of Human-Computer Interaction. Thousand Oaks: Sage Publications},
+  PUBLISHER = {Sage Publications},
+  BOOKTITLE = {The Encyclopedia of Human-Computer Interaction},
   DATE = {2004},
   TITLE = {User-Centered Design},
 }
@@ -1501,7 +1501,7 @@
   DATE = {2002-06},
   DOI = {10.1145/543812.543842},
   ISSN = {0097-8418},
-  JOURNALTITLE = {SIGCSE Bull.},
+  JOURNALTITLE = {Inroads -- SIGCSE Bulletin},
   NUMBER = {2},
   TITLE = {Gender, Software Design, and Occupational Equity},
   VOLUME = {34},
@@ -1535,7 +1535,7 @@
 
 @ARTICLE{brooke1996sus,
   AUTHOR = {Brooke, John},
-  PUBLISHER = {London},
+  PUBLISHER = {Taylor and Francis},
   DATE = {1996},
   JOURNALTITLE = {Usability e\-val\-u\-a\-tion in industry},
   NUMBER = {194},
@@ -1560,7 +1560,7 @@
   DATE = {1992-04},
   DOI = {10.1145/146802.146834},
   ISSN = {1046-8188},
-  JOURNALTITLE = {ACM Trans. Inf. Syst.},
+  JOURNALTITLE = {Transactions on Information Systems},
   KEYWORDS = {design rationale,planning,user interfaces},
   NUMBER = {2},
   TITLE = {Getting Around the Task-artifact Cycle: How to Make Claims and Design by Scenario},
@@ -1588,7 +1588,7 @@
   DATE = {1989-09},
   DOI = {10.2307/249008},
   ISSN = {0276-7783},
-  JOURNALTITLE = {MIS Q.},
+  JOURNALTITLE = {Management Information Systems Quarterly},
   KEYWORDS = {end user computing,user acceptance,user measurement},
   NUMBER = {3},
   TITLE = {Perceived Usefulness, Perceived Ease of Use, and User Acceptance of Information Technology},
@@ -1747,8 +1747,8 @@
 
 @ARTICLE{Bers:2014fk,
   AUTHOR = {Bers, Marina Umaschi and Flannery, Louise and Kazakoff, Elizabeth R. and Sullivan, Amanda},
-  LOCATION = {Oxford, UK, UK},
-  PUBLISHER = {Elsevier Science Ltd.},
+  LOCATION = {Oxford, UK},
+  PUBLISHER = {Elsevier},
   URL = {http://dx.doi.org/10.1016/j.compedu.2013.10.020},
   DATE = {2014-03},
   DOI = {10.1016/j.compedu.2013.10.020},
@@ -1818,7 +1818,7 @@
 @INCOLLECTION{Danado:2012vi,
   AUTHOR = {Danado, Jose and Paternò, Fabio},
   LOCATION = {Berlin, Heidelberg},
-  PUBLISHER = {Springer Berlin Heidelberg},
+  PUBLISHER = {Springer},
   URL = {http://link.springer.com/10.1007/978-3-642-34347-6_12},
   BOOKTITLE = {Virtual and Mixed Reality},
   DATE = {2012},
