Fixed title cases.

--- a/styles/custom.tex
+++ b/styles/custom.tex
@@ -18,7 +18,7 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{Fostering Computational Thinking skills with Tangible User Interfaces}
+\newcommand{\thesisTitle}{Fostering Computational Thinking Skills with Tangible User Interfaces}
 \newcommand{\thesisName}{Tommaso Turchi}
 \newcommand{\thesisSubject}{This dissertation is submitted for the degree of Doctor of Philosophy}
 \newcommand{\thesisDate}{January 18, 2019}
